# sigv4-verify

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  rust-toolchain.toml
.github/workflows/: ci.yml
cmd/gen-barrage/: main.go
cmd/gen-corpus/: main.go
cmd/loadgen/: main.go
cmd/presign-url/: main.go
cmd/sigv4-verify/: main.go  main_test.go
docs/: benchmarks.md  poc-e2e.md  rust-nginx-module-requirements.md  rust-nginx-module.md  security-candidates.md  security.md
docs/security-scan/: dedupe_report.md  finding_discovery_report.md  repository_coverage_ledger.md  threat_model.md
e2e/: nginx_module_test.go  nginx_unix_socket_test.go
examples/: config.yaml  nginx.conf  nginx_test.go
internal/config/: config.go  config_test.go  yaml.go
internal/metrics/: metrics.go
internal/server/: server.go
internal/verifier/: canonical.go  verifier.go  verifier_test.go
rust/module-config/: Cargo.toml
rust/module-config/src/: lib.rs
rust/nginx-module/: Cargo.toml  build.rs
rust/nginx-module/src/: lib.rs
rust/sigv4-verifier/: Cargo.toml  README.md
rust/sigv4-verifier/benches/: verify.rs
rust/sigv4-verifier/benches/support/: presign.rs
rust/sigv4-verifier/examples/: alloc_report.rs
rust/sigv4-verifier/fuzz/: .gitignore  Cargo.toml
rust/sigv4-verifier/fuzz/fuzz_targets/: fuzz_canonical_path.rs  fuzz_canonical_query.rs  fuzz_credential_scope.rs  fuzz_percent_decode.rs  fuzz_split_uri.rs  fuzz_verify.rs
rust/sigv4-verifier/src/: lib.rs
rust/sigv4-verifier/testdata/: differential-corpus.jsonl
rust/sigv4-verifier/tests/: differential.rs  verifier.rs
scripts/bench/: README.md  bench.sh  e2e-linux.sh  gen-urls.sh  multi-url.lua
