[package]
name = "sigv4-module-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Directive parsing and validation for the sigv4-verify NGINX module"
publish = false

[dependencies]
sigv4-verifier = { path = "../sigv4-verifier" }
zeroize = "1.8.2"
