[package]
name = "sigv4-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust SigV4 presigned URL verifier core for the NGINX module path"

[features]
# Exposes thin wrappers over the private parser internals for fuzzing only.
# Not part of the normal public API surface.
internals = []

[dependencies]
ring = "0.17.14"
subtle = "2.6.1"
zeroize = "1.8.2"

[dev-dependencies]
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "sigv4_verifier"
path = "src/lib.rs"

[[bench]]
name = "verify"
harness = false

